# cmake_primary_study

./: CMakeLists.txt  main.cpp
include/: hello.h
src/: CMakeLists.txt  hello.cpp  world.cpp
